# AutoBoundingBox

./: .gitignore  A2B.spec  DCRsystem_AutoAnnotator.spec  README.md  build.bat  main.py  pyproject.toml
.claude/: settings.local.json
autoannotator/: __init__.py  box_item.py  canvas.py  class_panel.py  export_dialog.py  exporter.py  inference.py  inference_panel.py  main_window.py  models.py  result_panel.py
