[project]
name = "dcrsystem-auto-annotator"
version = "0.1.0"
description = "YOLO学習用の自動アノテーションツール"
requires-python = ">=3.11"
dependencies = [
    "pyside6>=6.8.0",
    "ultralytics>=8.4.51",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

# torch / torchvision は PyTorch の CUDA 12.8 ビルドを使う（GPU推論用）
[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
]
